[package]
name = "registry"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.2.7"
cosmwasm-std = "1.2.7"
cosmwasm-storage = "1.2.7"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
dotlabs = { version = "0.1.0", path = "../../packages/dotlabs" }
hex = "0.4.3"
schemars = "0.8.12"
serde = { version = "1.0.166", features = ["derive"], default-features = false }
thiserror = "1.0.40"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }